--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "my-utils": "github:Maneren/my-utils#v0.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-p5": "^1.3.10",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
